Version 1.1.2 [ 05-Aug-2007 ]
=============================

NEW: Added all documents in the doc folder to the Documents folder within the 
	 Visual Studio 2005 project

NEW: Most code and comments are now aligned on the 80 character boundary

FIX: note.cpp(31) - changed MAX_FRET_NUMBER from 24 to 29
	 Bug found by Jon Eric Wennerstrom

FIX: note.cpp(35) - changed MAX_BEND_DURATION from 8 to 9
	 Bug found by Jon Eric Wennerstrom

Version 1.1.1 [ 09-Jul-2007 ]
=============================

FIX: chordname.h(233, 238, 243) - all instances of 'm_key' replaced with 'm_formula'
     Bug found by Simone Tellini

Version 1.1 [ 22-Apr-2007 ]
===========================

NEW: Project updated to a Visual Studio 2005 project

NEW: Project updated to use wxWidgets 2.8.3

FIX: testsuite.cpp(52) : error C2143: syntax error : missing ';' before 'return'
     
FIX: All wxStreamBase::LastError calls renamed to wxStreamBase::GetLastError

FIX: Removed wxHIDE_READONLY flag from wxFileDialog calls as it is no longer
     supported

FIX: Added std:: namespace prefix to all min and max calls

NEW: Added and changed WXUNUSED in several places to eliminate C4100: unreferenced
     formal parameter warnings

FIX: Removed <pos> tag from dialog resource in the .xrc file, and replaced it with
     <centered> tag. No longer get "Cannot convert dialog units" error.

NEW: Added statistical analysis feature to the Tools menu.


Version 1.0 [ 27-Jan-2006 ]
===========================

NEW: license.txt


Version 1.0 [ 10-Oct-2005 ]
===========================

NEW: Everything, it's the first version.

